<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/Trivia_Title"
        android:textSize="22dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />

    <ScrollView
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnHealthcare"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin = '10dp'
                android:text="@string/healthcare"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <Button
                android:id="@+id/btnFinances"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin = '10dp'
                android:text="@string/finances"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnHealthcare" />


            <Button
                android:id="@+id/btnCompScience"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin = '10dp'
                android:text="@string/computer_science"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFinances" />


            <Button
                android:id="@+id/btnViewScores"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin = '10dp'
                android:text="@string/view_scores"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCompScience" />

            <Button
                android:id="@+id/btnViewLeaderboard"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin = '10dp'
                android:text="@string/view_leaderboard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnViewScores" />

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin = '10dp'
                android:text="@string/settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnViewLeaderboard" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin = '10dp'
                android:text="@string/logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSettings" />


        </LinearLayout>




    </ScrollView>
"






</androidx.constraintlayout.widget.ConstraintLayout>