<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/Trivia_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp" android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="113dp"
            android:fontFamily="@font/amiri"
            android:layout_marginBottom="85dp"
            app:layout_constraintBottom_toTopOf="@+id/usernameTextView"/>
    <Button
            android:text="@string/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/amiri"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
            android:textSize="@dimen/small_font"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            app:layout_constraintStart_toEndOf="@+id/CreateAccountButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="171dp"/>
    <Button
            android:text="@string/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CreateAccountButton"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/amiri"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/small_font"
            app:layout_constraintEnd_toStartOf="@+id/loginButton"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="171dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/password_hint"
            android:autofillHints=""
            android:fontFamily="@font/amiri"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
            android:layout_marginTop="32dp"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:ems="10"
            android:id="@+id/usernameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints=""
            android:hint="@string/name_hint"
            android:fontFamily="@font/amiri"
            app:layout_constraintHorizontal_bias="0.494"
            android:layout_marginTop="84dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:layout_marginBottom="31dp"
            app:layout_constraintBottom_toTopOf="@+id/passwordTextView"/>
</androidx.constraintlayout.widget.ConstraintLayout>