<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvViewScoresTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="24dp"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:text="@string/my_scores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvHealthcareLabel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:text="@string/healthcare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvViewScoresTitle" />

    <TextView
        android:id="@+id/tvFinancesLabel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="12dp"
        android:text="@string/finances"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHealthcareLabel" />

    <TextView
        android:id="@+id/tvCSLabel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="12dp"
        android:text="CS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFinancesLabel" />

    <TextView
        android:id="@+id/tvHealthcareScore"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/cs"
        android:layout_marginLeft="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvHealthcareLabel"
        app:layout_constraintStart_toEndOf="@+id/tvHealthcareLabel"
        app:layout_constraintTop_toTopOf="@+id/tvHealthcareLabel" />

    <TextView
        android:id="@+id/tvFinancesScore"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/finances"
        android:layout_marginLeft="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFinancesLabel"
        app:layout_constraintStart_toEndOf="@+id/tvFinancesLabel"
        app:layout_constraintTop_toTopOf="@+id/tvFinancesLabel" />

    <TextView
        android:id="@+id/tvCSScore"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="CS"
        android:layout_marginLeft="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCSLabel"
        app:layout_constraintStart_toEndOf="@+id/tvCSLabel"
        app:layout_constraintTop_toTopOf="@+id/tvCSLabel" />


    <Button
        android:id="@+id/btnReturn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/returnHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>