<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameTextViewCreateAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/passwordTextViewCreateAccount"
            android:hint="@string/name_hint"
            android:autofillHints=""
            android:fontFamily="@font/amiri"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:layout_marginTop="110dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordTextViewCreateAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextViewCreateAccount"
            android:hint="@string/password_hint"
            android:autofillHints=""
            android:fontFamily="@font/amiri"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="300dp"
            android:layout_marginTop="20dp"/>
    <TextView
            android:text="@string/Trivia_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp" android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/amiri"
    />
    <Button
            android:text="@string/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RegisterAccountButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/LoginAccountButton"
            android:layout_marginBottom="120dp"
            android:fontFamily="@font/amiri"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/small_font"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            app:layout_constraintHorizontal_bias="0.313"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextViewCreateAccount"
            android:layout_marginEnd="50dp"/>
    <Button
            android:text="@string/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LoginAccountButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="120dp"
            android:fontFamily="@font/amiri"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/small_font"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            app:layout_constraintStart_toEndOf="@+id/RegisterAccountButton"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextViewCreateAccount"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>