<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homePage.ViewLeaderboardActivity">

    <TextView
        android:id="@+id/tvLeaderboardTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/leaderboard"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <Button
        android:id="@+id/btnReturn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/returnHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.triviaGame.homePage.LeaderboardFragment"
        android:layout_width="361dp"
        android:layout_height="400dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLeaderboardTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/fragment"
        app:layout_constraintBottom_toTopOf="@+id/btnReturn"
        >

    <Button
        android:id="@+id/btnShowHealthcare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Healthcare"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment" />

    <Button
        android:id="@+id/btnShowCS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CS"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/btnShowHealthcare"
        app:layout_constraintEnd_toStartOf="@+id/btnShowFinances"
        app:layout_constraintStart_toEndOf="@+id/btnShowHealthcare"
        app:layout_constraintTop_toTopOf="@+id/btnShowHealthcare"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnShowFinances"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finances"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/btnShowHealthcare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnShowCS" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>